--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="location" id="home">
           <h1 id="home">Meilleur film IMDB</h1>
           <div class="box">
-            <button onClick="openModal('')" class="js-modal swiper-slide"> <img id="movie10" id_api = "" src=""></button>       
+            <button onClick="openModal('')" class="js-modal swiper-slide"> <img id="bestMovie" id_api = "" src=""></button>       
           </div>
       </div>
     </section>
