Update slider + modal

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
       </div>
       <div class="slider" id="mySlider">
         <div class="movie" id="movie0">
-          <img src="" alt="" srcset="" onClick="openModal('')" class="js-modal swiper-slide">
+          <img src="" alt="" srcset="" onClick="" class="js-modal swiper-slide">
           <div class="description">
             <div class="description_title">
-              <h2 onClick="openModal('')" class="js-modal swiper-slide"> Titre du film </h2>
+              <h2 id="movie_title" onClick="openModal('')" class="js-modal swiper-slide"> </h2>
             </div>
             <div class="imdb_note">
               <h2> Note IMDB : 6.7/10 </h2>
@@ -61,7 +61,7 @@
     <aside id="modal" class="modal" style="display:none">
       <div class="modal-wrapper js-modal-stop">
         <button class="js-modal-close" id="closeButton">&times;</button>
-        <h1>Infos via API</h1>
+        <h1></h1>
         <p id="Anneedesortie">Informations sur le film obtenues via l'API</p>
       </div>
     </aside>
