--- a/index.html
+++ b/index.html
@@ -49,9 +49,6 @@
             <div class="description_title">
               <h2 id="movie_title" onClick="openModal('')" class="js-modal swiper-slide"> </h2>
             </div>
-            <div class="imdb_note">
-              <h2> Note IMDB : 6.7/10 </h2>
-            </div>
           </div>
         </div>
       </div>
@@ -61,8 +58,17 @@
     <aside id="modal" class="modal" style="display:none">
       <div class="modal-wrapper js-modal-stop">
         <button class="js-modal-close" id="closeButton">&times;</button>
-        <h1></h1>
-        <p id="Anneedesortie">Informations sur le film obtenues via l'API</p>
+        <h1 id="modaltitle"></h1>
+        <p id="genres"></p>
+        <p id="year"></p>
+        <p id="rated"></p>
+        <p id="imdb_score"></p>
+        <p id="directors"></p>
+        <p id="actors"></p>
+        <p id="duration"></p>
+        <p id="countries"></p>
+        <p id="income"></p>
+        <p id="description"></p>
       </div>
     </aside>
      
