--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- END OF HEADER -->
     
     <!-- MAIN CONTAINER -->
-    <section id="home" class="container maincontainer">
+    <div id="home" class="container maincontainer">
       <h1>Meilleur film IMDB</h1>
         <div class="mainmovie" id="landing">
           <div class="maindesc">
@@ -38,7 +38,7 @@
           </div>
           <img id="bestMovie" class= "js-modal" src="." alt="Picture of best movie">
         </div>
-    </section>
+      </div>
     
     <div id ="meilleursfilms" class="container">
       <h1>Meilleurs Films</h1>
@@ -90,7 +90,7 @@
           <path d="M12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586z" fill="currentColor"></path>
         </svg>
         <!-- <button class="js-modal-close" >&times;</button> -->
-        <h1 id="modaltitle">Titre du film</h1>
+        <h2 id="modaltitle">Titre du film</h2>
         <img id="modalImage" src="." alt="Affiche du film">
         <p id="genres"></p>
         <p id="year"></p>
@@ -127,6 +127,6 @@
       <p>Copy pour OpenClassRooms</p>
     </footer>
   </div>
-  <script src="./js/modal.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
