--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <h1 id="besttitle" class="description_title">Titre du film</h1>
             <h2 id="bestnote">Note du film</h2>
             <button id="bestinfos"> Infos </button>
+            <p id="bestdescription"></p>
           </div>
           <img id="bestMovie" class= "js-modal" src="." alt="Picture of best movie">
         </div>
