--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- HEADER -->
     <header>
       <div class="logo">
-        <h1 id="juststreamit">Just Stream It</h1>
+        <img src="./images/logo.png">
       </div>      
       <nav class="main-nav">                
         <a href="#home">Accueil</a>
